package service

import (
	"context"
	"encoding/json"
	"fmt"

	"go.uber.org/zap"

	"ecommerce/internal/logistics/model"
	"ecommerce/internal/logistics/repository"
	// 伪代码: 模拟三方物流网关和消息队列
	// "ecommerce/pkg/logistics/easypost"
	// "ecommerce/pkg/mq"
)

// LogisticsService 定义了物流服务的业务逻辑接口
type LogisticsService interface {
	// 消息队列消费者处理方法
	HandleOrderProcessing(ctx context.Context, payload []byte) error

	// gRPC 接口方法
	GetShipmentStatus(ctx context.Context, orderSN string) (*model.Shipment, error)
}

// logisticsService 是接口的具体实现
type logisticsService struct {
	repo   repository.LogisticsRepository
	logger *zap.Logger
	// easyPostClient easypost.Client
	// mqProducer     mq.Producer
}

// NewLogisticsService 创建一个新的 logisticsService 实例
func NewLogisticsService(repo repository.LogisticsRepository, logger *zap.Logger) LogisticsService {
	return &logisticsService{repo: repo, logger: logger}
}

// OrderProcessingPayload 是从订单服务接收到的事件消息体
type OrderProcessingPayload struct {
	OrderSN         string  `json:"order_sn"`
	UserID          uint    `json:"user_id"`
	ShippingAddress string  `json:"shipping_address"`
	ContactPhone    string  `json:"contact_phone"`
	// 可以包含商品重量、尺寸等信息用于计算运费
}

// HandleOrderProcessing 处理订单进入“处理中”状态的事件，为之创建货运单
func (s *logisticsService) HandleOrderProcessing(ctx context.Context, payload []byte) error {
	var event OrderProcessingPayload
	if err := json.Unmarshal(payload, &event); err != nil {
		s.logger.Error("Failed to unmarshal order processing event", zap.Error(err))
		return err
	}

	s.logger.Info("Handling order processing event", zap.String("orderSN", event.OrderSN))

	// 1. 幂等性检查：检查是否已为该订单创建了货运单
	existingShipment, err := s.repo.GetShipmentByOrderSN(ctx, event.OrderSN)
	if err != nil {
		return fmt.Errorf("检查现有货运单失败: %w", err)
	}
	if existingShipment != nil {
		s.logger.Warn("Shipment already exists for this order", zap.String("orderSN", event.OrderSN))
		return nil // 已处理，直接返回
	}

	// 2. 调用第三方物流 API 创建货运单、购买标签
	// shipmentDetails, err := s.easyPostClient.CreateShipment(...)
	// 伪造 API 返回结果
	shipmentDetails := struct {
		Carrier        string
		TrackingNumber string
		LabelURL       string
		Cost           float64
	}{"UPS", "1Z9999999999999999", "http://example.com/label.pdf", 12.50}

	if err != nil {
		s.logger.Error("Failed to create shipment with gateway", zap.String("orderSN", event.OrderSN), zap.Error(err))
		// 此处应有重试或告警逻辑
		return err
	}

	// 3. 在数据库中存储货运信息
	newShipment := &model.Shipment{
		OrderSN:        event.OrderSN,
		Carrier:        shipmentDetails.Carrier,
		TrackingNumber: shipmentDetails.TrackingNumber,
		LabelURL:       shipmentDetails.LabelURL,
		ActualCost:     shipmentDetails.Cost,
		Status:         model.StatusCreated,
	}
	if err := s.repo.CreateShipment(ctx, newShipment); err != nil {
		s.logger.Error("Failed to save shipment to DB", zap.String("orderSN", event.OrderSN), zap.Error(err))
		return err
	}

	// 4. 发送消息通知订单服务，订单已发货
	// shippedEvent := map[string]string{"orderSN": event.OrderSN, "trackingNumber": newShipment.TrackingNumber}
	// if err := s.mqProducer.Publish("order.shipped", shippedEvent); err != nil {
	// 	 s.logger.Error("Failed to publish order shipped event", zap.Error(err))
	// 	 // 补偿逻辑
	// }

	s.logger.Info("Shipment created successfully", zap.String("orderSN", event.OrderSN), zap.String("trackingNumber", newShipment.TrackingNumber))
	return nil
}

// GetShipmentStatus 获取货运状态
func (s *logisticsService) GetShipmentStatus(ctx context.Context, orderSN string) (*model.Shipment, error) {
	s.logger.Info("GetShipmentStatus called", zap.String("orderSN", orderSN))

	shipment, err := s.repo.GetShipmentByOrderSN(ctx, orderSN)
	if err != nil {
		return nil, err
	}
	if shipment == nil {
		return nil, fmt.Errorf("找不到该订单的货运信息")
	}

	// (可选) 在这里可以加入逻辑，如果距离上次更新时间较长，则主动去第三方 API 查询最新状态
	// latestStatus, err := s.easyPostClient.GetTrackingInfo(shipment.TrackingNumber)
	// ... 更新数据库 ...

	return shipment, nil
}